--- a/notebooks/Topic_classifier.ipynb
+++ b/notebooks/Topic_classifier.ipynb
@@ -27,17 +27,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from catboost import CatBoostClassifier, Pool\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import KFold, train_test_split, cross_val_score\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import ExtraTreesClassifier, RandomForestClassifier\n",
+    "from sklearn.svm import SVC, LinearSVC\n",
+    "\n",
+    "import optuna\n",
+    "import shap\n",
+    "\n",
+    "import torch\n",
     "from transformers import AutoModel, AutoTokenizer\n",
-    "import torch"
+    "\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -196,20 +212,6 @@
     "\n",
     "    return mean_kfold_score, best_model"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -486,36 +488,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "import json\n",
-    "#import os\n",
-    "\n",
-    "#import numpy as np\n",
-    "#import pandas as pd\n",
-    "\n",
-    "from catboost import CatBoostClassifier, Pool\n",
-    "\n",
-    "#from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.model_selection import KFold, train_test_split#, cross_val_score\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
-    "#from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "#from sklearn.linear_model import LogisticRegression\n",
-    "#from sklearn.ensemble import ExtraTreesClassifier, RandomForestClassifier\n",
-    "#from sklearn.svm import SVC, LinearSVC\n",
-    "\n",
-    "#import optuna\n",
-    "import torch\n",
-    "import seaborn as sns\n",
-    "import shap"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -756,9 +728,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6000, 61560)\n",
+      "(1500, 61560)\n",
+      "(2500, 61560)\n"
+     ]
+    }
+   ],
    "source": [
     "vectorizer = TfidfVectorizer()\n",
     "X_TFIDF = vectorizer.fit_transform(train['text'])\n",
@@ -779,9 +761,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7580876369474244\n"
+     ]
+    }
+   ],
    "source": [
     "# Обечение с валидацией\n",
     "logreg = LogisticRegression(random_state=RANDOM_STATE)\n",
